Upsert implementation - SqlUpsertQueryBuilder refactoring